[package]
name = "cargo-autoinherit"
version = "0.1.5"
edition = "2021"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
description = "A cargo sub-command to leverage dependency inheritance wherever possible"
keywords = ["cargo", "workspace", "inheritance", "dependencies"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
repository = "https://github.com/mainmatter/cargo-autoinherit"
license = "Apache-2.0 OR MIT"

[dependencies]

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
